--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 																	sizes="(max-width: 65px) 100vw, 65px" />
 															</div>
 															<div class="wt_testimonial_meta">
-																<h4 class="wt_testimonial_author">Pr. Paschoal Piragine - PIB de Curitiba</span></h4>
+																<h4 class="wt_testimonial_author">Pr. Paschoal Piragine <span>PIB de Curitiba</span></h4>
 															</div>
 														</div>
 													</div>
@@ -796,8 +796,7 @@
 																	sizes="(max-width: 65px) 100vw, 65px" />
 															</div>
 															<div class="wt_testimonial_meta">
-																<h4 class="wt_testimonial_author">Jonathas Pompeu<span>Primeira Igreja Batista de
-																		Curitiba</span></h4>
+																<h4 class="wt_testimonial_author">Jonathas Pompeu <span>Primeira Igreja Batista de Curitiba</span></h4>
 															</div>
 														</div>
 													</div>
